# autocapcut

./: .gitignore  index.html  package-lock.json  package.json  pnpm-lock.yaml
.github/workflows/: build-windows.yml
src/: App.tsx  index.css
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: config.rs  lib.rs  main.rs  notification.rs  tray.rs  updater.rs  validation.rs
src-tauri/src/automation/: helpers.rs  logger.rs  mod.rs  runner.rs  scanner.rs  window.rs
src-tauri/src/automation/steps/: cleanup.rs  export.rs  mod.rs  project.rs  recovery.rs  render.rs  setup.rs
src-tauri/src/detect/: capture.rs  matcher.rs  mod.rs
src-tauri/src/license/: api_client.rs  cache.rs  fingerprint.rs  gate.rs  mod.rs  validator.rs
src-tauri/src/sync/: mod.rs
src/components/: ControlPanel.tsx  FolderSelector.tsx  Header.tsx  LicenseBadge.tsx  LicenseDialog.tsx  ProgressBar.tsx  ProjectTable.tsx  SetupWizard.tsx  Terminal.tsx  UpdateBanner.tsx  ValidationBanner.tsx
src/hooks/: useAutoDetect.ts  useAutomation.ts  useCoordPicker.ts  useLicense.ts  useProgress.ts  useSync.ts  useUpdater.ts  useValidation.ts
src/utils/: LogContext.tsx  SettingsContext.tsx
