[package]
name = "autocapcut"
version = "1.0.0"
description = "AutoCapcut — Tự động export video hàng loạt từ CapCut"
authors = ["AutoCapcut Team"]
edition = "2021"

[lib]
name = "autocapcut_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri          = { version = "2", features = [] }
tauri-plugin-dialog       = "2"
tauri-plugin-opener       = "2"
tauri-plugin-notification = "2"
tauri-plugin-updater      = "2"
tauri-plugin-process      = "2"
tauri-plugin-tray       = "2"

serde      = { version = "1", features = ["derive"] }
serde_json = "1"
tokio      = { version = "1", features = ["full"] }

# Automation
enigo          = "0.3"
rdev           = "0.5"
system_shutdown = "4.0"

# Utilities
once_cell = "1"
log       = "0.4"
env_logger = "0.11"

# Image I/O (cho detect module: lưu/đọc template PNG)
image = { version = "0.25", default-features = false, features = ["png"] }

[target.'cfg(target_os = "windows")'.dependencies]
# Windows API — dùng raw FFI trong window.rs, không cần thêm crate

# License System
sha2 = "0.10"
chrono = { version = "0.4", features = ["serde"] }
aes-gcm = "0.10"
pbkdf2 = { version = "0.12", features = ["hmac"] }
base64 = "0.22"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

[target.'cfg(target_os = "windows")'.dependencies.winreg]
version = "0.52"
